--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 	compile group: 'commons-codec', name: 'commons-codec', version: '1.8'
 	compile group: 'commons-cli', name: 'commons-cli', version: '1.3.1'
     compile group: 'org.jgrapht', name: 'jgrapht-core', version: '1.0.0'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.6.3'
 	compile 'com.google.protobuf:protobuf-java:3.0.0-beta-2'
 	compile 'io.grpc:grpc-all:0.13.2'
 }
@@ -72,14 +73,14 @@ sourceSets {
 
 jar {
 	manifest { 
-		attributes 'Main-Class': 'org.vitrivr.cineast.SilvanPlayground'
+		attributes 'Main-Class': 'org.vitrivr.cineast.Deserializer'
 	}  
 
 	from {
 		configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 	}
 	
-	archiveName = 'cineast.jar'
+	archiveName = 'cineast_07122016.jar'
 }
 
 task copyConfigs(type: Copy){
